# agentic-affiliate-outreach-system

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  ci-cd.yml  create_structure.py  demo_script.md  docker-compose.yml  instructions.md  logging_config.py  nginx.conf  plan.txt  pyproject.toml  pytest.ini  requirements.txt  sample.txt  sample_prospects.csv  setup.sh
.github/workflows/: ci.yml  deploy-prod.yml  deploy.yml
_config/environments/: dev.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_content_table.py  (+3 more)
api/: dependencies.py  main.py
config/: grafana_dashboard.json  prometheus_rules.yml  settings.py
database/: models.py  session.py
deployment/: __init__.py
docs/: README.md  api.md  architecture_compliance_analysis.md  frontend_architecture.md  project_structure.md  project_structure_standardized.md  restructuring_complete.md  setup.md  system_design.md  testing.md
migrations/: env.py
scripts/: README.md  config.py  create_tables.py  run_ab_test.py  run_prospect_scoring.py  seed_db.py
services/: __init__.py  affiliate_discovery.py  cache.py  cache_service.py  email.py  email_service.py  lead_discovery.py  linkedin.py  logging_service.py  messaging.py  monitoring_service.py  outreach.py  prospect_scoring.py  response_tracking.py  scoring.py  scoring_service.py  social_service.py  twitter.py  validator.py  visualization_service.py  webhook_service.py
src/: README.md  __init__.py
tasks/: celery_app.py  outreach_tasks.py  response_handler.py  scoring_tasks.py  sequence_tasks.py
templates/: follow_up_email.html  sign_up.html  welcome_email.html
tests/: README.md  conftest.py  pytest.ini  test_smoke.py  utils.py
ui/: gradio_app.py  steamlit_app.py  streamlit_app.py
(+337 files in other folders)
